--- a/index.html
+++ b/index.html
@@ -261,15 +261,23 @@ console.log("detachedNode after setting to null: ", detachedNode);
 </code>
 				</pre>
 			</section>
-			<section>Event Listeners</section>
-			<section>
+			<section data-transition="zoom" data-transition-speed="slow">
+				<h2>Event Listeners</h2>
+			</section>
+			<section data-transition="zoom" data-transition-speed="slow">
+				<h2>Event Listeners: leak</h2>
 				<pre>
 					<code class="language-javascript">
 // Event Listener
 document.getElementById('button').addEventListener('click', function() {
 	console.log('Button clicked');
 });
-
+					</code>
+				</section>
+				<section data-transition="zoom" data-transition-speed="slow">
+					<h2>Event Listeners: mitigation</h2>
+					<pre>
+						<code class="language-javascript">
 // Mitigation
 const button = document.getElementById('button');
 button.addEventListener('click', function() {
@@ -280,18 +288,8 @@ button.addEventListener('click', function() {
 button.removeEventListener('click', function() {
 	console.log('Button clicked');
 });
-					</code>
-				</section>
-				<section>
-				<pre>
-					<code class="language-javascript">
-						const button = document.getElementById('myButton');
-						button.addEventListener('click', function() {
-								console.log('Button clicked!');
-						});
-						// If button is removed from the DOM but listener is not removed, it causes a leak.
-					</code>
-				</section>
+						</code>
+					</section>
 			<section>Timers and Intervals</section>
 			<section>
 				<pre>
@@ -363,7 +361,7 @@ module.exports = { url };
 			<section>Fuite</section>
 			<section>
 				<h2>Fuite</h2>
-				<pre><code class="language-bash">fuite http://your-web-app.com</code></pre>
+				<pre><code class="language-bash">npx fuite http://your-web-app.com</code></pre>
 			</section>
 			<section>WeakMap & WeakSet</section>
 			<section>
@@ -395,6 +393,10 @@ module.exports = { url };
 					that objects are not kept in memory longer than necessary.</p>
 			</section>
 			<section>Closing</section>
+			<section>
+				<h2>Contact</h2>
+				<img src="images/qr.png" alt="QR Code to danieldanielecki.com" />
+			</section>
 		</div>
 	</div>
 
