--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			<section data-transition="zoom" data-transition-speed="slow">
 				<h2>Global Variables: leak</h2>
 				<pre>
-					<code class="language-javascript">
+					<code class="language-javascript" data-trim data-line-numbers="|1|4-7|8|11|12">
 let serverData = [];
 
 function fetchData() {
@@ -132,7 +132,7 @@ console.log('my server data: ', serverData);
 			<section data-transition="zoom" data-transition-speed="slow">
 				<h2>Global Variables: mitigation</h2>
 				<pre>
-					<code class="language-javascript">
+					<code class="language-javascript" data-trim data-line-numbers="|14|15,17|18|16|12,19">
 let serverData = [];
 
 function fetchData() {
@@ -158,7 +158,7 @@ console.log('my server data: ', serverData);
 			<section data-transition="zoom" data-transition-speed="slow">
 				<h2>Global Variables: leak</h2>
 				<pre>
-					<code class="language-javascript">
+					<code class="language-javascript" data-trim data-line-numbers="|1,3|4|2|6">
 function createGlobalVar() {
 	globalVar = "I'm a global variable"; // Implicitly global
 }
@@ -171,7 +171,7 @@ console.log(window.globalVar) // Implicitly global check
 			<section data-transition="zoom" data-transition-speed="slow">
 				<h2>Global Variables: mitigation</h2>
 				<pre>
-					<code class="language-javascript">
+					<code class="language-javascript" data-trim data-line-numbers="|1,3|4|2|6">
 function createGlobalVar() {
 	let globalVar = "I'm a global variable"; // or const, or even var
 }
@@ -187,7 +187,7 @@ console.log(window.globalVar) // no longer implicitly global
 			<section data-transition="zoom" data-transition-speed="slow">
 				<h2>Detached DOM Nodes: leak</h2>
 				<pre>
-						<code class="language-javascript">
+						<code class="language-javascript" data-trim data-line-numbers="|1|2,8|9|3|4|5|6|7">
 let detachedNode;
 function createDetachedNode() {
 	const div = document.createElement("div");
@@ -203,7 +203,7 @@ createDetachedNode();
 			<section data-transition="zoom" data-transition-speed="slow">
 				<h2>Detached DOM Nodes: mitigation</h2>
 				<pre>
-						<code class="language-javascript">
+						<code class="language-javascript" data-trim data-line-numbers="|11|12|13|7,13">
 let detachedNode;
 function createDetachedNode() {
 	const div = document.createElement("div");
@@ -227,37 +227,32 @@ console.log("detachedNode after setting to null: ", detachedNode);
 			<section data-transition="zoom" data-transition-speed="slow">
 				<h2>Closures: leak</h2>
 				<pre>
-					<code class="language-javascript">
-						function outerFunction() {
-							let largeArray = new Array(1000000).fill('memory leak');
-							return function innerFunction() {
-									console.log(largeArray);
-							};
-					}
-					const leak = outerFunction(); // `largeArray` is retained in memory.
+					<code class="language-javascript" data-trim data-line-numbers="|1,6|7|2|3-5">
+function outerFunction() {
+	let largeArray = new Array(1000000).fill('memory leak');
+	return function innerFunction() {
+		console.log(largeArray);
+	};
+}
+const leak = outerFunction(); // `largeArray` is retained in memory.
 </code>
 				</pre>
 			</section>
 			<section data-transition="zoom" data-transition-speed="slow">
 				<h2>Closures: mitigation</h2>
 				<pre>
-					<code class="language-javascript">
-						function outerFunction() {
-							let largeArray = new Array(1000000).fill('memory leak');
-							return function innerFunction() {
-									console.log(largeArray);
-							};
-					}
-					const leak = outerFunction(); // `largeArray` is retained in memory.
+					<code class="language-javascript" data-trim data-line-numbers="|1,10|11|2|4|5|7-9">
+function outerFunction() {
+	let largeArray = new Array(1000000).fill("memory leak");
 
-					// fix
-					function outerFunction() {
-						let largeArray = new Array(1000000).fill('memory leak');
-						return function innerFunction() {
-								console.log(largeArray);
-						};
-				}
-				const leak = outerFunction(); // `largeArray` is retained in memory.
+	// Use the required value, not the entire object.
+	const importantValue = largeArray[0];
+
+	return function innerFunction() {
+		console.log(importantValue); // only this is kept in the memory, garbage collector will now free memory from largeArray.
+	};
+}
+const leak = outerFunction();
 </code>
 				</pre>
 			</section>
@@ -267,7 +262,7 @@ console.log("detachedNode after setting to null: ", detachedNode);
 			<section data-transition="zoom" data-transition-speed="slow">
 				<h2>Event Listeners: leak</h2>
 				<pre>
-					<code class="language-javascript">
+					<code class="language-javascript" data-trim data-line-numbers="|1|2|4|3">
 // Event Listener
 document.getElementById('button').addEventListener('click', function() {
 	console.log('Button clicked');
@@ -277,7 +272,7 @@ document.getElementById('button').addEventListener('click', function() {
 				<section data-transition="zoom" data-transition-speed="slow">
 					<h2>Event Listeners: mitigation</h2>
 					<pre>
-						<code class="language-javascript">
+						<code class="language-javascript" data-trim data-line-numbers="|1|2|3-5|7|8-10">
 // Mitigation
 const button = document.getElementById('button');
 button.addEventListener('click', function() {
@@ -348,8 +343,8 @@ button.removeEventListener('click', function() {
 			<section>MemLab</section>
 			<section>
 				<h2>MemLab</h2>
-				<pre><code class="language-bash">memlab run --scenario scenario.js --verbose -debug --headful</code></pre>
-				<pre><code class="language-javascript">
+				<pre><code class="language-bash" data-line-numbers>memlab run --scenario scenario.js --verbose --debug --headful</code></pre>
+				<pre><code class="language-javascript" data-trim data-line-numbers="|1|2-4|6">
 // initial page load's url
 function url() {
   return "http://your-web-app.com";
@@ -361,7 +356,7 @@ module.exports = { url };
 			<section>Fuite</section>
 			<section>
 				<h2>Fuite</h2>
-				<pre><code class="language-bash">npx fuite http://your-web-app.com</code></pre>
+				<pre><code class="language-bash" data-line-numbers>npx fuite http://your-web-app.com</code></pre>
 			</section>
 			<section>WeakMap & WeakSet</section>
 			<section>
