fix: Heap and Stack slides

--- a/index.html
+++ b/index.html
@@ -67,23 +67,54 @@
 					<li class="fragment custom blur highlight-current-white fade-up">Worst case; application crashes.</li>
 				</ol>
 			</section>
-			<section>Stack vs Heap</section>
-			<section>
+			<section data-transition="zoom" data-transition-speed="slow">
+				<h1>Stack vs Heap</h1>
+			</section>
+			<section data-transition="zoom" data-transition-speed="slow">
 				<h2>Stack vs Heap</h2>
-				<p>Stack and heap are two memory regions used for storing data in a computer's memory. They have different
-					characteristics and are used for different purposes:</p>
 				<ul>
-					<li class="fragment custom blur highlight-current-white fade-up"><strong>Stack:</strong> The stack is a region
-						of memory that stores variables and function calls in a
-						sequential order. It is used for storing local variables, function parameters, and return addresses. The
-						stack is a fixed-size memory region that grows and shrinks as functions are called and return.</li>
-					<li class="fragment custom blur highlight-current-white fade-up"><strong>Heap:</strong> The heap is a region
-						of memory that stores dynamically allocated memory. It is used
-						for storing objects, arrays, and other data structures that are created at runtime. The heap is a
-						dynamic-size memory region that grows and shrinks as memory is allocated and deallocated.</li>
+					<li class="fragment custom blur highlight-current-white fade-up">Memory region used for storing data in a
+						computer's memory.</li>
+					<li class="fragment custom blur highlight-current-white fade-up">They have different characteristics = are
+						used for different purposes.</li>
 				</ul>
-				<p>Memory leaks can occur in both the stack and heap, but they are more common in the heap due to the dynamic
-					nature of memory allocation and deallocation.</p>
+			</section>
+			<section data-transition="zoom" data-transition-speed="slow">
+				<h2>Stack</h2>
+				<ul>
+					<li class="fragment custom blur highlight-current-white fade-up">Memory region used for storing data in a
+						computer's memory.</li>
+					<li class="fragment custom blur highlight-current-white fade-up">Stores variables and
+						function calls in a
+						sequential order.</li>
+					<li class="fragment custom blur highlight-current-white fade-up">It is used for storing local variables,
+						function parameters, and
+						return addresses.</li>
+					<li class="fragment custom blur highlight-current-white fade-up">Fixed-size memory region that
+						grows and shrinks as functions are called and return.</li>
+				</ul>
+			</section>
+			<section data-transition="zoom" data-transition-speed="slow">
+				<h2>Heap</h2>
+				<ul>
+					<li class="fragment custom blur highlight-current-white fade-up">Memory region for storing data in computer's
+						memory.</li>
+					<li class="fragment custom blur highlight-current-white fade-up">Region
+						of memory that stores dynamically allocated memory.</li>
+					<li class="fragment custom blur highlight-current-white fade-up">It is used
+						for storing objects, arrays, and other data structures that are created at runtime.</li>
+					<li class="fragment custom blur highlight-current-white fade-up">Dynamic-size memory region that grows and
+						shrinks as memory is allocated and deallocated.</li>
+				</ul>
+			</section>
+			<section data-transition="zoom" data-transition-speed="slow">
+				<h2>Stack vs Heap</h2>
+				<ul>
+					<li class="fragment custom blur highlight-current-white fade-up">Can occur in both.</li>
+					<li class="fragment custom blur highlight-current-white fade-up">More common in
+						the heap due to the dynamic
+						nature of memory allocation and deallocation.</li>
+				</ul>
 			</section>
 			<section data-transition="zoom" data-transition-speed="slow">
 				<img src="images/stack_vs_heap.png" alt="Stack" height="600vh" />
