--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<div class="reveal">
 		<div class="slides">
 			<section data-transition="zoom" data-transition-speed="slow">
-				<h1 style="margin: 20vh auto;">Memory Leaks</h1>
+				<h1 style="margin: 15vh auto;">Memory Leaks in JavaScript</h1>
 				<p>Daniel Danielecki</p>
 				<div style="font-size: 1.5rem">
 					<small style="display: block;">Amsterdam, The Netherlands</small>
