--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ module.exports = { url };
 			<section data-transition="zoom" data-transition-speed="slow">
 				<h1>WeakMap & WeakSet</h1>
 			</section>
-			<section data-transition="zoom" data-transition-speed="slow">
+			<section data-transition="zoom" data-transition-speed="slow" data-visibility="hidden">
 				<h2>WeakMap & WeakSet</h2>
 				<ul>
 					<li class="fragment custom blur highlight-current-white fade-up">Data structures.</li>
@@ -440,7 +440,7 @@ module.exports = { url };
 						leaks.</li>
 				</ul>
 			</section>
-			<section data-transition="zoom" data-transition-speed="slow">
+			<section data-transition="zoom" data-transition-speed="slow" data-visibility="hidden">
 				<h2>WeakMap</h2>
 				<ul>
 					<li class="fragment custom blur highlight-current-white fade-up">Collection of key/value pairs.</li>
@@ -453,7 +453,7 @@ module.exports = { url };
 						references to the object.</li>
 				</ul>
 			</section>
-			<section data-transition="zoom" data-transition-speed="slow">
+			<section data-transition="zoom" data-transition-speed="slow" data-visibility="hidden">
 				<h2>WeakMap</h2>
 				<pre><code class="language-javascript" data-trim data-line-numbers="|1|2|3|4|5">
 let weakMap = new WeakMap();
@@ -463,7 +463,7 @@ weakMap.set(obj, 'some value');
 obj = null; // Now `obj` can be garbage collected, and the entry in the WeakMap is removed
 				</code></pre>
 			</section>
-			<section data-transition="zoom" data-transition-speed="slow">
+			<section data-transition="zoom" data-transition-speed="slow" data-visibility="hidden">
 				<h2>WeakSet</h2>
 				<ul>
 					<li class="fragment custom blur highlight-current-white fade-up">Collection of objects.</li>
@@ -472,7 +472,7 @@ obj = null; // Now `obj` can be garbage collected, and the entry in the WeakMap 
 						references to an object stored in a WeakSet, the object can be garbage collected.</li>
 				</ul>
 			</section>
-			<section data-transition="zoom" data-transition-speed="slow">
+			<section data-transition="zoom" data-transition-speed="slow" data-visibility="hidden">
 				<h2>WeakSet</h2>
 				<pre><code class="language-javascript" data-trim data-line-numbers="|1|2|3|4|5">
 let weakSet = new WeakSet();
@@ -503,7 +503,7 @@ obj = null; // Now `obj` can be garbage collected, and the entry in the WeakSet 
 					<li class="fragment custom blur highlight-current-white fade-up">Global variables, detached DOM nodes,
 						closures, event listeners, timers
 						and intervals.</li>
-					<li class="fragment custom blur highlight-current-white fade-up">Chrome DevTools, MemLab, Fuite, and WeakMap
+					<li class="fragment custom blur highlight-current-white fade-up">Chrome DevTools, MemLab, Fuite, WeakMap
 						and WeakSet.
 					</li>
 				</ul>
