--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
 				</div>
 			</section>
 			<section data-transition="zoom" data-transition-speed="slow">
+				<img src="images/meetup.png" alt="Meetup Accessible Banking" height="600vh" />
+			</section>
+			<section data-transition="zoom" data-transition-speed="slow">
+				<img src="images/meetup_numbers.png" alt="Meetup Accessible Banking attendee numbers" height="600vh" />
+			</section>
+			<section data-transition="zoom" data-transition-speed="slow">
+				<img src="images/meetup_ticket.png" alt="Meetup Accessible Banking ticket" height="600vh" />
+			</section>
+			<section data-transition="zoom" data-transition-speed="slow">
 				<h1>101</h1>
 				<ol>
 					<li class="fragment custom blur highlight-current-white fade-up">Allocation (Creating variables/objects)</li>
@@ -46,7 +55,7 @@
 				</ol>
 			</section>
 			<section data-transition="zoom" data-transition-speed="slow">
-				<h1>Definition</h1>
+				<h1>Definitions</h1>
 			</section>
 			<section data-transition="zoom" data-transition-speed="slow">
 				<h2>What is a Memory Leak?</h2>
@@ -226,7 +235,7 @@ console.log('my server data: ', serverData);
 			<section data-transition="zoom" data-transition-speed="slow">
 				<h2>Global Variables: leak</h2>
 				<pre>
-					<code class="language-javascript" data-trim data-line-numbers="|1,3|4|2|6">
+					<code class="language-javascript" data-trim data-line-numbers="|2|6">
 function createGlobalVar() {
 	globalVar = "I'm a global variable"; // Implicitly global
 }
@@ -309,7 +318,7 @@ const leak = outerFunction(); // `largeArray` is retained in memory.
 			<section data-transition="zoom" data-transition-speed="slow">
 				<h2>Closures: mitigation</h2>
 				<pre>
-					<code class="language-javascript" data-trim data-line-numbers="|1,10|11|2|4|5|7-9">
+					<code class="language-javascript" data-trim data-line-numbers="|4|5|7-9">
 function outerFunction() {
 	let largeArray = new Array(1000000).fill("memory leak");
 
@@ -399,7 +408,7 @@ interval();
 				<h2>Several tools</h2>
 				<ul>
 					<li class="fragment custom blur highlight-current-white fade-up">Heap Snapshots</li>
-					<li class="fragment custom blur highlight-current-white fade-up">Allocation Timeline</li>
+					<li class="fragment custom blur highlight-current-white fade-up">Allocation Timeline/Profiler</li>
 					<li class="fragment custom blur highlight-current-white fade-up">Performance Tab</li>
 					<li class="fragment custom blur highlight-current-white fade-up">Detached DOM Nodes</li>
 				</ul>
@@ -506,6 +515,7 @@ obj = null; // Now `obj` can be garbage collected, and the entry in the WeakSet 
 					<li class="fragment custom blur highlight-current-white fade-up">Chrome DevTools, MemLab, Fuite, WeakMap
 						and WeakSet.
 					</li>
+					<li class="fragment custom blur highlight-current-white fade-up"> SPA vs MPA.</li>
 				</ul>
 			</section>
 			<section data-transition="zoom" data-transition-speed="slow">
