docs: remove Meetup info

--- a/index.html
+++ b/index.html
@@ -32,18 +32,9 @@
 				<h1 style="margin: 15vh auto;">Memory Leaks in JavaScript</h1>
 				<p>Daniel Danielecki</p>
 				<div style="font-size: 1.5rem">
-					<small style="display: block;">Amsterdam, The Netherlands</small>
-					<small>March 21, 2025</small>
+					<small style="display: block;">Bologna, Italy</small>
+					<small>April 7, 2025</small>
 				</div>
-			</section>
-			<section data-transition="zoom" data-transition-speed="slow">
-				<img src="images/meetup.png" alt="Meetup Accessible Banking" height="600vh" />
-			</section>
-			<section data-transition="zoom" data-transition-speed="slow">
-				<img src="images/meetup_numbers.png" alt="Meetup Accessible Banking attendee numbers" height="600vh" />
-			</section>
-			<section data-transition="zoom" data-transition-speed="slow">
-				<img src="images/meetup_ticket.png" alt="Meetup Accessible Banking ticket" height="600vh" />
 			</section>
 			<section data-transition="zoom" data-transition-speed="slow">
 				<h1>101</h1>
